kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dlinear-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: dlinear-forecast
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
